# U

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
data/: new_russia (1).geojson  russia_neighbours.json
headers/: demo.h  error.h  game.h  gamewidget.h  list.h  parser.h  player_window.h  presenter.h  queue.h  subject.h
src/: demo.cpp  error.cpp  game.cpp  gamewidget.cpp  player_window.cpp  presenter.cpp  queue.cpp  str.cpp  subject.cpp
ui/: player.ui  player_window.ui
